--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
